@@ -21,6 +21,7 @@
   * Add A#unshift
   * Rename Enumerable#includes to Enumerable#has_value
   * Add Enumerable#has_key
+  * Enumerable#offsetGet accepts an optional default value
 
 2009-03-13 - Sean Huber (shuber@huberry.com)
   * Add Enumerable (incomplete)
